// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/team_channel_settings/group/UsersToRemove should match snapshot loading 1`] = `
<div
  className="UsersToRemove"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.team_channel_settings.user_list.nameHeader"
            values={Object {}}
          />,
          "width": 5,
        },
        Object {
          "field": "role",
          "name": <FormattedMessage
            defaultMessage="Role"
            id="admin.team_channel_settings.user_list.roleHeader"
            values={Object {}}
          />,
          "width": 2,
        },
        Object {
          "field": "groups",
          "name": <FormattedMessage
            defaultMessage="Groups"
            id="admin.team_channel_settings.user_list.groupsHeader"
            values={Object {}}
          />,
          "width": 3,
        },
      ]
    }
    endCount={2}
    filterProps={
      Object {
        "keys": Array [
          "role",
        ],
        "onFilter": [Function],
        "options": Object {
          "role": Object {
            "keys": Array [
              "system_guest",
              "team_user",
              "team_admin",
              "system_admin",
            ],
            "name": <FormattedMessage
              defaultMessage="Role"
              id="admin.user_grid.role"
              values={Object {}}
            />,
            "values": Object {
              "system_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="System Admin"
                  id="admin.user_grid.system_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "system_guest": Object {
                "name": <FormattedMessage
                  defaultMessage="Guest"
                  id="admin.user_grid.guest"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="Team Admin"
                  id="admin.user_grid.team_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_user": Object {
                "name": <FormattedMessage
                  defaultMessage="Member"
                  id="admin.user_item.member"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
        },
      }
    }
    loading={true}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No users found"
        id="admin.member_list_group.notFound"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={Array []}
    search={[Function]}
    startCount={1}
    term=""
    total={2}
  />
</div>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemove should match snapshot searching with filters 1`] = `
<div
  className="UsersToRemove"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.team_channel_settings.user_list.nameHeader"
            values={Object {}}
          />,
          "width": 5,
        },
        Object {
          "field": "role",
          "name": <FormattedMessage
            defaultMessage="Role"
            id="admin.team_channel_settings.user_list.roleHeader"
            values={Object {}}
          />,
          "width": 2,
        },
        Object {
          "field": "groups",
          "name": <FormattedMessage
            defaultMessage="Groups"
            id="admin.team_channel_settings.user_list.groupsHeader"
            values={Object {}}
          />,
          "width": 3,
        },
      ]
    }
    endCount={2}
    filterProps={
      Object {
        "keys": Array [
          "role",
        ],
        "onFilter": [Function],
        "options": Object {
          "role": Object {
            "keys": Array [
              "system_guest",
              "team_user",
              "team_admin",
              "system_admin",
            ],
            "name": <FormattedMessage
              defaultMessage="Role"
              id="admin.user_grid.role"
              values={Object {}}
            />,
            "values": Object {
              "system_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="System Admin"
                  id="admin.user_grid.system_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "system_guest": Object {
                "name": <FormattedMessage
                  defaultMessage="Guest"
                  id="admin.user_grid.guest"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="Team Admin"
                  id="admin.user_grid.team_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_user": Object {
                "name": <FormattedMessage
                  defaultMessage="Member"
                  id="admin.user_item.member"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
        },
      }
    }
    loading={true}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No users found"
        id="admin.member_list_group.notFound"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={Array []}
    search={[Function]}
    startCount={1}
    term="foo"
    total={2}
  />
</div>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemove should match snapshot with 2 users 1`] = `
<div
  className="UsersToRemove"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.team_channel_settings.user_list.nameHeader"
            values={Object {}}
          />,
          "width": 5,
        },
        Object {
          "field": "role",
          "name": <FormattedMessage
            defaultMessage="Role"
            id="admin.team_channel_settings.user_list.roleHeader"
            values={Object {}}
          />,
          "width": 2,
        },
        Object {
          "field": "groups",
          "name": <FormattedMessage
            defaultMessage="Groups"
            id="admin.team_channel_settings.user_list.groupsHeader"
            values={Object {}}
          />,
          "width": 3,
        },
      ]
    }
    endCount={2}
    filterProps={
      Object {
        "keys": Array [
          "role",
        ],
        "onFilter": [Function],
        "options": Object {
          "role": Object {
            "keys": Array [
              "system_guest",
              "team_user",
              "team_admin",
              "system_admin",
            ],
            "name": <FormattedMessage
              defaultMessage="Role"
              id="admin.user_grid.role"
              values={Object {}}
            />,
            "values": Object {
              "system_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="System Admin"
                  id="admin.user_grid.system_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "system_guest": Object {
                "name": <FormattedMessage
                  defaultMessage="Guest"
                  id="admin.user_grid.guest"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="Team Admin"
                  id="admin.user_grid.team_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_user": Object {
                "name": <FormattedMessage
                  defaultMessage="Member"
                  id="admin.user_item.member"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
        },
      }
    }
    loading={true}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No users found"
        id="admin.member_list_group.notFound"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={Array []}
    search={[Function]}
    startCount={1}
    term=""
    total={2}
  />
</div>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemove should match snapshot with guests disabled 1`] = `
<div
  className="UsersToRemove"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.team_channel_settings.user_list.nameHeader"
            values={Object {}}
          />,
          "width": 5,
        },
        Object {
          "field": "role",
          "name": <FormattedMessage
            defaultMessage="Role"
            id="admin.team_channel_settings.user_list.roleHeader"
            values={Object {}}
          />,
          "width": 2,
        },
        Object {
          "field": "groups",
          "name": <FormattedMessage
            defaultMessage="Groups"
            id="admin.team_channel_settings.user_list.groupsHeader"
            values={Object {}}
          />,
          "width": 3,
        },
      ]
    }
    endCount={2}
    filterProps={
      Object {
        "keys": Array [
          "role",
        ],
        "onFilter": [Function],
        "options": Object {
          "role": Object {
            "keys": Array [
              "team_user",
              "team_admin",
              "system_admin",
            ],
            "name": <FormattedMessage
              defaultMessage="Role"
              id="admin.user_grid.role"
              values={Object {}}
            />,
            "values": Object {
              "system_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="System Admin"
                  id="admin.user_grid.system_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_admin": Object {
                "name": <FormattedMessage
                  defaultMessage="Team Admin"
                  id="admin.user_grid.team_admin"
                  values={Object {}}
                />,
                "value": false,
              },
              "team_user": Object {
                "name": <FormattedMessage
                  defaultMessage="Member"
                  id="admin.user_item.member"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
        },
      }
    }
    loading={true}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No users found"
        id="admin.member_list_group.notFound"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={Array []}
    search={[Function]}
    startCount={1}
    term=""
    total={2}
  />
</div>
`;
